<resources>
    <string name="app_name">Netflix</string>
    <string name="s_ries">Shows</string>
    <string name="filmes">Movies</string>
    <string name="minha_lista">My List</string>
    <string name="super_heroi">Super Hero</string>
    <string name="fam_lia">Family</string>
    <string name="a_o">Action</string>
    <string name="assistir">Play</string>
    <string name="add_minha_lista">MY LIST</string>
    <string name="detalhes">DETAILS</string>
    <string name="lan_amentos">Releases</string>
    <string name="kau_alexandre_bernardes">Kauã Alexandre Bernardes</string>
</resources>